2004-01-05  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_open_files), (on_open1_activate):
	Patch to avoid being able to select directories in the main window
	file selector (Closes: #129459)
	Patch by Harsh Jaitly <hjaitly@novell.com>

2004-01-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_add_pls):
	When a file is empty, don't try to parse it, and say we parsed
	properly, fixes the problem of Totem trying to play ~/.gnome2/totem.pls
	(Closes: #129591)

2004-01-04  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_button_press):
	Don't hide mouse button presses from GTK+ (Closes: #127586)

2004-01-04  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem-playlist.c:
	* src/totem.c: (on_recent_file_activate):
	When a file is clicked inside the recent-files, it's added at
	the end of the playlist and played straight away (Closes: #129581)
	Patch by Harsh Jaitly <hjaitly@novell.com>

2003-12-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: remove unused defines and includes
	* src/totem.c: (totem_action_error_and_exit),
	(video_widget_create), (main): make sure that we don't get an
	extra period in error messages
	* src/video-utils.c: remove unneeded stdint.h include (Closes: #129909)

2003-12-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: upd
	* src/totem-preferences.c: (totem_setup_preferences):
	When the media device doesn't exist, we should get it directly from
	the selection widget (fixes problems with disappearing devices)

2003-12-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_restore_pl):
	Set the logo path if we can't restore a playlist on startup

2003-12-23  Julien MOUTTE <julien@moutte.net>

	* configure.in: Switching to GStreamer 0.7.x and using
	gstreamer-interfaces package.
	* src/bacon-video-widget-gst.c: (bacon_video_widget_realized),
	(print_tag), (got_found_tag), (got_video_size),